--- a/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Spotify/style.css
+++ b/Bootstrap Design Responsivo/Bootstrap/Projetos-Bootstrap4/Spotify/style.css
@@ -73,6 +73,11 @@ nav.navbar-trasparente {
     color: black;
 }
 
+.carousel-control-next, .carousel-control-prev {
+    width: 5%;
+
+}
+
 /* Estrutura de Conteúdo */
 
 .caixa {
