--- a/Sites Responsivos/site-reponsivo/css/style.css
+++ b/Sites Responsivos/site-reponsivo/css/style.css
@@ -318,7 +318,7 @@ footer .container ul{
 
 footer .container h3{
     margin-bottom: 16px;
-    font-width: 600;
+    font-size: 600;
 }
 footer .container .redes-socias img{
     margin-right: 10px;
