--- a/Sites Responsivos/site-reponsivo/css/style.css
+++ b/Sites Responsivos/site-reponsivo/css/style.css
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
-
+/* Link https://www.youtube.com/watch?v=Nua1Ug5DgxE&list=PL9zVxgnjCLHlYerrH772UrPPNYQjbF1DS */
 *{
     margin: 0;
     padding: 0;
