--- a/Sites Responsivos/Teste/style.css
+++ b/Sites Responsivos/Teste/style.css
@@ -91,7 +91,7 @@ h4{
     border-radius: 3px;
 }
 
-@media only screen and (max-width: 868px){
+@media (max-width: 868px){
     .subContainer{
         flex-direction: column;
         flex: 100%;
@@ -102,8 +102,8 @@ h4{
     }
 }
 
-@media only screen and (max-width: 700px){
-    .content>div{
+@media (max-width: 700px){
+    .content div{
         flex: 100%;
     }
 
